Fix - Add Contact

--- a/www/lib/ionic/css/ionic.css
+++ b/www/lib/ionic/css/ionic.css
@@ -9811,3 +9811,8 @@ a.button {
   opacity: 0;
   -webkit-transition-duration: 0s;
   transition-duration: 0s; }
+
+
+a, a:visited, a:focus, a:hover {
+  text-decoration: none;
+}
