--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,1 +1,8 @@
 /* Empty. Add your own CSS if you like */
+.img-profile {
+    border-radius: 50%;
+    display: block;
+    margin: auto;
+    width: 200px;
+    height: 200px;
+}
