--- a/www/templates/edit.html
+++ b/www/templates/edit.html
@@ -10,7 +10,7 @@
     <ion-content>
         <img class="img-profile" src="{{contact.photos[0].value}}"
             ng-if="contact.photos.length > 0" ng-click="changePhoto()">
-        <img class="img-profile" src="img/user-avatar.png"
+        <img class="img-profile" src="img/user_profile_256.png"
             ng-if="!contact.photos" ng-click="changePhoto()">
         <div class="list" style="margin:0 auto; padding-left: 25px; padding-right: 25px; ">
             Nome:
